# GHTerminal-rust

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  dependabot-automerge.yml  pages.yml
doc/: 国赫电台设备控制协议.md
docs/: index.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/canvas/: SpectrumCanvas.svelte  WaterfallCanvas.svelte
frontend/src/components/: AudioControls.svelte  ChannelPanel.svelte  ConnectionBar.svelte  CwControls.svelte  FrequencyControl.svelte  MeterDisplay.svelte  ModeSelector.svelte  NrNbControls.svelte  PollControls.svelte  PttButton.svelte  RfControls.svelte  SerialConnect.svelte  SpectrumControls.svelte  StatusBar.svelte  ToggleSwitch.svelte  TunerControl.svelte  VfoPanel.svelte
frontend/src/lib/: radio-types.js  store.js  tauri-bridge.js  ws.js
gh-protocol/: Cargo.toml
gh-protocol/src/: codec.rs  command.rs  crc.rs  error.rs  lib.rs  packet.rs  types.rs
gh-terminal/: Cargo.toml  build.rs  tauri.conf.json
gh-terminal/capabilities/: default.json
gh-terminal/src/: api_routes.rs  assets.rs  commands.rs  config.rs  handler.rs  main.rs  serial_port.rs  state.rs  ws.rs
