[package]
name = "gh-terminal"
version.workspace = true
edition.workspace = true

[dependencies]
gh-protocol = { path = "../gh-protocol" }

axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = "8.6"
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
bytes = "1"
chrono = "0.4"
