[package]
name = "gh-terminal"
version.workspace = true
edition.workspace = true

[dependencies]
gh-protocol = { path = "../gh-protocol" }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
